--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body style="margin:0px">
 
-<div id="lunaradio" style='width:100%; height:100%;background-image: url("img/FONDO4.JPG"); background-repeat: no-repeat; background-size: cover; background-position: center;
+<div id="lunaradio" style='width:100%; height:100%;background-image: url("img/FONDO2.jpg"); background-repeat: no-repeat; background-size: cover; background-position: center;
 -webkit-border-top-left-radius: 0px;
   -webkit-border-top-right-radius: 0px;
   -webkit-border-bottom-right-radius: 0px;
@@ -41,7 +41,7 @@ $("#lunaradio").lunaradio({
 	fontname: "Saira Condensed",
 	googlefont: "Saira+Condensed:wght@100",
 	fontratio: "0.3",
-	radioname: "RumbaMix San Agustin Huila",
+	radioname: "RumbaMix Online. San Agustín Huila",
 	scroll: "true",
 	coverimage: "https://zenoimages.s3.us-west-001.backblazeb2.com/512e4552-b53a-4034-b007-262cd0a30306/images/logo?keep=w&resize=350x350",
 	usevisualizer: "fake",
